# preceptor-ia

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.reversa/: config.toml  plan.md  setup.json  state.json
.reversa/_config/: files-manifest.json  manifest.yaml
.reversa/context/: modules.json  surface.json
_reversa_sdd/: architecture.md  c4-components.md  c4-containers.md  c4-context.md  code-analysis.md  confidence-report.md  data-dictionary.md  dependencies.md  domain.md  erd-complete.md  gaps.md  inventory.md  permissions.md  questions.md  state-machines.md
_reversa_sdd/adrs/: 0001-migracao-n8n-telegram-para-python-streamlit.md  0002-arquitetura-hexagonal-portas-e-adaptadores.md  0003-prompt-canonico-como-dado.md  0004-provedor-openai-compatible-default-groq.md  0005-nao-retencao-por-padrao-historico-opt-in.md  0006-contingencia-offline-da-demonstracao.md
_reversa_sdd/analise-llm/: contracts.md  design.md  questions.md  requirements.md  tasks.md
_reversa_sdd/configuracao/: design.md  requirements.md  tasks.md
_reversa_sdd/flowcharts/: application.md  config.md  domain.md  infra.md  ui.md
_reversa_sdd/gerar-ficha/: design.md  requirements.md  tasks.md
_reversa_sdd/historico-local/: design.md  questions.md  requirements.md  tasks.md
_reversa_sdd/interface-streamlit/: design.md  requirements.md  tasks.md
demo/: ficha-exemplo.md  transcricao-simulada.md
prompts/: prompt-snapps-omp.md
src/preceptor_ia/: config.py
tests/: test_adaptadores.py  test_domain.py  test_gerar_ficha.py  test_historico.py
(+21 files in other folders)
