[project]
name = "preceptor-ia"
version = "0.1.0"
description = "PreceptorIA — feedback formativo estruturado SNAPPS-OMP por IA para preceptoria em Medicina de Família e Comunidade"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Iago Bernardes Alves Leal Barbosa" }]
dependencies = [
    "streamlit==1.59.2",
    "httpx==0.28.1",
    "pydantic-settings==2.14.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preceptor_ia"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
